 - Improve database handling resilience
 - Inherit database file ownership from database directory if UpdateFileOwner
   configuration option is enabled (default: enabled) when adding new
   interfaces for monitoring as root. This solves database file ownership
   mismatches when the daemon is started as a non-root user and an interface
   gets added for monitoring with a sudo command as root


1.15 / 22-Dec-2015

 - Fix: XML output had extra commas, broken since previous version
 - Fix: unintended shared pointer modification in mosecs() sometimes resulted
   in wrong month name to be shown for the current month
 - Fix: possible buffer overflow in /proc/net/dev parsing, requires corrupted
   content in /proc/net/dev or use of address sanitizer (found by Hanno Böck)
 - Use ANSI escape codes in -l and -tr modes for cursor location manipulation
   instead of printing backspaces, hide cursor while output is active
 - Improve database import robustness
 - Improve support for Asian UTF-8 date strings
 - Replace hand written Makefiles with Autotools
 - Add --alwaysadd parameter to daemon for allowing automatic addition of
   interfaces even if the database directory was populated during startup


1.14 / 26-Apr-2015

 - Fix: JSON output syntax during first day of newly created databases
   (pull request by Stefan Merettig)
 - Fix: field padding when using UTF-8 locale
 - Add optional mode parameter to --json and --xml for limiting the output
   to only selected information


1.13 / 18-Jan-2015

 - Fix: getgroup() test in Debian GNU/kFreeBSD (patch by Felix Geyer)
 - Fix: struct if_data usage after freeifaddrs() call in BSD
 - Dynamic unit selection in hourly output instead of being fixed to KiB
 - New options in image output (vnstati)
     * -nl / --nolegend for hiding the rx/tx legend
     * --altdate for using alternative date and time text location
     * --headertext for using custom text string in image header section
 - Add legend to hourly output image